# mma

./: .gitignore  Cargo.toml
CI/: Dockerfile  Dockerfile.bench  Dockerfile.dev  Dockerfile.dev_distroless  Dockerfile.prod  Dockerfile.prod_distroless  Dockerfile.test  install_podman.sh  run_CI.sh  scylla.yaml  test_endpoints.py
CI/experimental/: Dockerfile.tiny_rust_helloworld  Dockerfile_gcr_compressed_binary.dev  Dockerfile_gcr_fast.dev  Dockerfile_opt_z_compress_upx_30mb.dev  Dockerfile_opt_z_upx_28mb.dev  Dockerfile_tiny_image.dev
benches/: my_benchmark_suite.rs
benchmark_results/0.1.0/: summary.txt
benchmark_results/0.1.0/dashboard_authenticated/: result.txt
benchmark_results/0.1.0/home_page/: result.txt
benchmark_results/0.1.0/login_bad_password_fail/: result.txt
benchmark_results/0.1.0/login_no_user_fail/: result.txt
benchmark_results/0.1.0/login_success/: result.txt
benchmark_results/0.1.0/version/: result.txt
benchmark_results/0.1.1/: summary.txt
benchmark_results/0.1.1/home_page/: result.txt
benchmark_results/0.1.1/login_bad_password_fail/: result.txt
benchmark_results/0.1.1/login_no_user_fail/: result.txt
benchmark_results/0.1.1/login_success/: result.txt
benchmark_results/0.1.1/version/: result.txt
benchmark_results/0.1.2/: summary.txt
benchmark_results/0.1.2/health/: result.txt
benchmark_results/0.1.2/home_page/: result.txt
benchmark_results/0.1.2/login_bad_password_fail/: result.txt
benchmark_results/0.1.2/login_no_user_fail/: result.txt
benchmark_results/0.1.2/login_success/: result.txt
benchmark_results/0.1.2/version/: result.txt
benchmark_results/0.1.3/: summary.txt
benchmark_results/0.1.3/health/: result.txt
benchmark_results/0.1.3/home_page/: result.txt
benchmark_results/0.1.3/login_bad_password_fail/: result.txt
benchmark_results/0.1.3/login_no_user_fail/: result.txt
benchmark_results/0.1.4/: summary.txt
benchmark_results/0.1.5/: summary.txt
benchmark_results/0.1.6/: summary.txt
benchmark_results/0.1.7/: summary.txt
schema/1/: init_schema.cql
schema/2/: init_schema.cql  update_schema.cql
scripts/: create_bmmac.sh  create_me.sh  external_bench.sh  local_search_scylla.txt  mma_workspace.sh  popos_setup.txt  run_CI.sh  run_CICD.sh  run_local_debug.sh  run_scylladb_local_docker.sh  test_user_create_profile_logout.sh
src/: api.rs  auth.rs  cookies.txt  create_me.sh  db.rs  db_migrate.rs  email_sender.rs  error.rs  lib.rs  main.rs  models.rs  payment_plan.rs  processor.rs  server.rs  state.rs  stripe_client.rs  templates.rs  test_user_create_profile_logout.sh
templates/: contact.html  contact_confirmation.html  forgotten_password.html  gym_signup.html  home.html  kiosk.html  login.html  portal.html  signup-success.html  style.css
(+62 files in other folders)
