[package]
name = "mma"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
scylla = { version = "1.1.0", features = ["bigdecimal-04", "chrono-04"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
futures = "0.3"
once_cell = "1.17"
actix-web = "4.3"
argon2 = "0.5.3"
rand_core = { version = "0.9.3", features = ["std"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"]}
chrono-tz = { version = "0.5", default-features = false }
time = "0.3"
futures-util = "0.3"
dashmap = "5.5" # For concurrent HashMap
notify = "6.1" # For file watching
notify-debouncer-full = "0.3" # Debouncer for notify
bigdecimal = { version = "0.4", features = ["serde"]}
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls", "builder"] }
native-tls = "0.2"
mail-builder = "0.2.5"
urlencoding = "2.1.3"
reqwest = { version ="0.12.19", features = ["json"]}
dotenv = "0.15.0"
ansi_term = "0.12.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "plotters", "cargo_bench_support"] }
actix-web-test = "0.0.1"
actix-rt = "2.8"

[[bench]]
name = "my_benchmark_suite" # You can name this anything, e.g., "db_benchmarks"
harness = false


# These are the default settings (you don't need to add this unless customizing)
[profile.release]
opt-level = "z"        # Maximum optimizations
debug = false        # No debug info
lto = true         # Link-time optimization (can be enabled for even more optimization)
strip = true


[profile.bench]
opt-level = 3
lto = true          # Enable link-time optimization for maximum performance
debug = false
codegen-units = 1   # Better optimization at the cost of compile time
